Fixed footer alignment and attributions info

--- a/sass/components/_mainBody.scss
+++ b/sass/components/_mainBody.scss
@@ -53,6 +53,10 @@
   }
 }
 
+.attribution {
+  text-align: center;
+}
+
 @include desktop-md-query {
   .home {
     display: flex;
