--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,10 @@ button {
   color: hsl(0deg, 0%, 41%);
 }
 
+.attribution {
+  text-align: center;
+}
+
 @media (min-width: 1024px) {
   .home {
     display: flex;
